--- a/locales/fr/home.json
+++ b/locales/fr/home.json
@@ -1,6 +1,6 @@
 {
     "home_title": "Salut je m'appelle",
-    "home_name": "Nathan Brodin",
+    "home_name": "Nathan Brodin.",
     "home_subheading": "Je suis un étudiant français de {{age}} ans à l'école d'ingénieur ESIEA.",
     "home_opportunity": "Je recherche un stage d'été en 2023."
 }
