--- a/locales/en/home.json
+++ b/locales/en/home.json
@@ -1,6 +1,6 @@
 {
     "home_title": "Hi, my name is",
-    "home_name": "Nathan Brodin",
+    "home_name": "Nathan Brodin.",
     "home_subheading": "I'm a {{age}} years old french student in the engineer school ESIEA.",
     "home_opportunity": "I'm looking for a summer internship in 2023."
 }
