--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -2,5 +2,8 @@
     "home": "Home",
     "projects": "Projects",
     "about": "About",
-    "contact": "Contact"
+    "contact": "Contact",
+    "rights": "All rights reserved.",
+    "licence": "MIT Licence",
+    "github": "See this repository on GitHub"
 }
