--- a/locales/en/home.json
+++ b/locales/en/home.json
@@ -2,6 +2,6 @@
     "home_title": "Hi, my name is",
     "home_name": "Nathan Brodin.",
     "home_subtitle": "I'm a Software Engineer.",
-    "home_subheading": "I'm a {{age}} years old french student in the engineer school ESIEA.",
+    "home_subheading": "I'm a {{age}} years old french student in the engineer school ",
     "home_opportunity": "I'm looking for a summer internship in 2023."
 }
