--- a/locales/fr/home.json
+++ b/locales/fr/home.json
@@ -2,6 +2,6 @@
     "home_title": "Salut je m'appelle",
     "home_name": "Nathan Brodin.",
     "home_subtitle": "Je suis un ingénieur logiciel.",
-    "home_subheading": "Je suis un étudiant français de {{age}} ans à l'école d'ingénieur ESIEA.",
+    "home_subheading": "Je suis un étudiant français de {{age}} ans à l'école d'ingénieur ",
     "home_opportunity": "Je recherche un stage d'été en 2023."
 }
