Change of Favicon Logo

--- a/locales/fr/home.json
+++ b/locales/fr/home.json
@@ -3,5 +3,6 @@
     "home_name": "Nathan Brodin.",
     "home_subtitle": "Je suis un ingénieur logiciel.",
     "home_subheading": "Je suis un étudiant français de {{age}} ans à l'école d'ingénieur ",
-    "home_opportunity": "Je recherche un stage d'été en 2023."
+    "home_opportunity": "Je recherche un stage d'été en 2023.",
+    "home_get_started": "Découvrir"
 }
