--- a/locales/en/home.json
+++ b/locales/en/home.json
@@ -3,5 +3,6 @@
     "home_name": "Nathan Brodin.",
     "home_subtitle": "I'm a Software Engineer.",
     "home_subheading": "I'm a {{age}} years old french student in the engineer school ",
-    "home_opportunity": "I'm looking for a summer internship in 2023."
+    "home_opportunity": "I'm looking for a summer internship in 2023.",
+    "home_get_started": "Get Started"
 }
