--- a/locales/en/projects.json
+++ b/locales/en/projects.json
@@ -1,5 +1,6 @@
 {
     "project_title": "My projects",
+    "view_on_github": "View on GitHub",
     "projectsList": [
         {
             "id": 0,
