--- a/locales/fr/projects.json
+++ b/locales/fr/projects.json
@@ -1,5 +1,5 @@
 {
-    "title": "Mes projets",
+    "project_title": "Mes projets",
     "view_on_github": "Voir sur GitHub",
     "projectsList": [
         {
