--- a/locales/en/projects.json
+++ b/locales/en/projects.json
@@ -6,7 +6,7 @@
             "id": 0,
             "icon": "/projects/icons/mypasswordmanager.svg",
             "title": "My Password Manager",
-            "description": "My Password Manager is a chrome extension to store, autofill and submit your informations to any website. Every data is encrypted using AES and stored into Firebase Firestore database.",
+            "description": "My Password Manager is a Chrome extension to store, autofill, and submit your information to any website. Every bit of data is encrypted using AES and stored in the Firebase Firestore database. The extension provides a popup with a login, a signup, and a dashboard page. It is already available on the Chrome Web Store.",
             "tags": [
                 "React.js",
                 "Firebase",
@@ -23,7 +23,7 @@
             "id": 1,
             "icon": "/projects/icons/esieabot.svg",
             "title": "Esieabot Mobile App", 
-            "description": "The Esieabot mobile application allows you to control the ESIEABOT robot remotely via Bluetooth.",
+            "description": "The Esieabot mobile application allows you to control the robot Esieabot remotely via Bluetooth. It includes features such as: -Robot control via four directional arrows. -Live viewing of the robot camera -A return to home function -Activation of the ultrasonic sensor  -Room scan function  -A user guide -Automatic pairing with a new robot  -Configuration of the robot's wifi via the app.",
             "tags": [
                 "Kotlin",
                 "Python",
@@ -38,7 +38,7 @@
             "id": 2,
             "icon": "/projects/icons/portfolio.svg",
             "title": "Portfolio Website",
-            "description": "Developpement of my personal portfolio. Deployed on Vercel.",
+            "description": "Development of my personal portfolio to showcase all my projects. The website is deployed on Vercel under my custom domain name. I used Next.js to develop the website and Tailwind CSS for the styling. I also use Flowbite to create the main components. Many improvements are planned for the future.",
             "tags": [
                 "Next.js",
                 "Tailwind CSS",
@@ -53,7 +53,7 @@
             "id": 3,
             "icon": "/projects/icons/python.svg",
             "title": "Python Management System",
-            "description": "Grocery store management system made for Python course at Centria University",
+            "description": "Grocery store management system made for my Python course at Centria University. The system is made with Python and custom Tkinter. It allows you to manage products and orders.",
             "tags": [
                 "Python",
                 "Tkinter"
@@ -67,7 +67,7 @@
             "id": 4,
             "icon": "/projects/icons/aes.svg",
             "title": "AES",
-            "description": "Implementation of AES 128 in C",
+            "description": "Implementation of AES 128 in C. It allows you to encrypt and decrypt a message with a custom key using the official documentation of AES. made for my cryptography course at ESIEA.",
             "tags": [
                 "C Programming",
                 "Cryptography"
