--- a/locales/fr/home.json
+++ b/locales/fr/home.json
@@ -1,7 +1,7 @@
 {
-    "home_title": "Salut je m'appelle",
+    "home_title": "Salut je suis",
     "home_name": "Nathan Brodin.",
-    "home_subtitle": "Je suis un ingénieur logiciel.",
+    "home_subtitle": "Je suis un développeur.",
     "home_subheading": "Je suis un étudiant français de {{age}} ans à l'école d'ingénieur ",
     "home_opportunity": "Je recherche un stage d'été en 2023.",
     "home_get_started": "Découvrir"
