new font and cursor animation

--- a/locales/fr/home.json
+++ b/locales/fr/home.json
@@ -1,5 +1,5 @@
 {
-    "home_title": "Salut je suis",
+    "home_title": "Salut, je suis",
     "home_name": "Nathan Brodin.",
     "home_subtitle": "Je suis un développeur.",
     "home_subheading": "Je suis un étudiant français de {{age}} ans à l'école d'ingénieur ",
