--- a/locales/fr/common.json
+++ b/locales/fr/common.json
@@ -1,7 +1,7 @@
 {
     "home": "Accueil",
     "projects": "Projets",
-    "about": "À propos",
+    "about": "A propos",
     "contact": "Contact",
     "rights": "Tous droits réservés.",
     "licence": "Licence MIT",
