Completed About section

--- a/locales/en/about.json
+++ b/locales/en/about.json
@@ -1,4 +1,5 @@
 {
     "about_title": "About",
-    "about_description": "This section is not developed yet."
+    "about_description": "Hi! My name is Nathan Brodin, I'm 20, and I develop things in my free time. I like programming and I'm always looking for new challenges. I created websites, mobile apps, and more...",
+    "about_description_2": "In 2020, I entered the ESIEA French Engineering School as an IT major to learn more about math, science, and software development. I'm in the third year of my studies (out of five). I discovered a lot of technologies and theoretical concepts, but I also put my knowledge into practice in various projects (see the project part of the site)."
 }
