--- a/locales/fr/contact.json
+++ b/locales/fr/contact.json
@@ -1,4 +1,4 @@
 {
     "contact_title": "Contact",
-    "contact_description": "Cette section n'est pas encore développée."
+    "contact_description": "N'hésitez pas à me contacter pour toutes questions ou suggestions."
 }
