--- a/locales/en/contact.json
+++ b/locales/en/contact.json
@@ -1,4 +1,4 @@
 {
     "contact_title": "Contact",
-    "contact_description": "This section is not developed yet."
+    "contact_description": "Feel free to contact me for any questions or suggestions."
 }
